[gd_scene load_steps=6 format=3 uid="uid://k7tbki55kkeu"]

[ext_resource type="Script" uid="uid://op0344qbf6l4" path="res://content/packs/basic_addition/levels/grid_counting/grid_counting_d/program.gd" id="1_s3wvb"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="2_c72in"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="3_mc33q"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="4_lyrth"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="5_473ow"]

[node name="LevelProgram" type="Node"]
script = ExtResource("1_s3wvb")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_c72in")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="States" type="Node" parent="StateChart"]
script = ExtResource("3_mc33q")
initial_state = NodePath("SelectCell")

[node name="SelectCell" type="Node" parent="StateChart/States"]
script = ExtResource("4_lyrth")

[node name="ToDragMemo" type="Node" parent="StateChart/States/SelectCell"]
script = ExtResource("5_473ow")
to = NodePath("../../DragMemo")
event = &"done"
delay_in_seconds = "0.0"

[node name="DragMemo" type="Node" parent="StateChart/States"]
script = ExtResource("4_lyrth")

[node name="ToCompleted" type="Node" parent="StateChart/States/DragMemo"]
script = ExtResource("5_473ow")
to = NodePath("../../Completed")
event = &"done"
delay_in_seconds = "0.0"

[node name="Completed" type="Node" parent="StateChart/States"]
script = ExtResource("4_lyrth")

[connection signal="state_entered" from="StateChart/States/SelectCell" to="." method="_on_select_cell_state_entered"]
[connection signal="state_exited" from="StateChart/States/SelectCell" to="." method="_on_select_cell_state_exited"]
[connection signal="state_entered" from="StateChart/States/DragMemo" to="." method="_on_drag_memo_state_entered"]
